--- a/CafeMenuProject.DataAccess/App.config
+++ b/CafeMenuProject.DataAccess/App.config
@@ -7,7 +7,7 @@
 
 	<connectionStrings>
 		<add name="CafeMenuDbConnection"
-			 connectionString="Server=localhost;Database=CafeMenuDb;Integrated Security=True;"
+			 connectionString="Server=MSI-K17B13VFK;Database=CafeMenuDb;Integrated Security=True;"
 			 providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	
