--- a/CafeMenuProject.DataAccess/App.config
+++ b/CafeMenuProject.DataAccess/App.config
@@ -10,10 +10,11 @@
 			 connectionString="Server=MSI-K17B13VFK;Database=CafeMenuDb;Integrated Security=True;"
 			 providerName="System.Data.SqlClient" />
 	</connectionStrings>
-	
+
 	<entityFramework>
 		<providers>
-			<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+			<provider invariantName="System.Data.SqlClient"
+					  type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework" />
 		</providers>
 	</entityFramework>
 </configuration>
