--- a/CafeMenuProject.DataAccess/App.config
+++ b/CafeMenuProject.DataAccess/App.config
@@ -6,8 +6,8 @@
 	</configSections>
 
 	<connectionStrings>
-		<add name="CafeMenuDbConnection"
-			 connectionString="Server=MSI-K17B13VFK;Database=CafeMenuDb;Integrated Security=True;"
+		<add name="CafeMenuDb"
+			 connectionString="Data Source=ASUS-ROGSZ590A;Initial Catalog=CafeMenuDb;Integrated Security=True;MultipleActiveResultSets=True;"
 			 providerName="System.Data.SqlClient" />
 	</connectionStrings>
 
