--- a/CafeMenuProject.DataAccess/CafeMenuProject.DataAccess.csproj
+++ b/CafeMenuProject.DataAccess/CafeMenuProject.DataAccess.csproj
@@ -56,6 +56,11 @@
     <Compile Include="Configurations\CategoryConfiguration.cs" />
     <Compile Include="Configurations\ProductConfiguration.cs" />
     <Compile Include="Context\ApplicationDbContext.cs" />
+    <Compile Include="Migrations\202509191639292_InitialCreate.cs" />
+    <Compile Include="Migrations\202509191639292_InitialCreate.Designer.cs">
+      <DependentUpon>202509191639292_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -67,6 +72,11 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202509191639292_InitialCreate.resx">
+      <DependentUpon>202509191639292_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
