--- a/CafeMenuProject.Core/CafeMenuProject.Core.csproj
+++ b/CafeMenuProject.Core/CafeMenuProject.Core.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{1A9CE3E1-826A-45A7-B66F-51FFB8F76FD6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CafeMenuProject.Entities</RootNamespace>
-    <AssemblyName>CafeMenuProject.Entities</AssemblyName>
+    <RootNamespace>CafeMenuProject.Core</RootNamespace>
+    <AssemblyName>CafeMenuProject.Core</AssemblyName>
     <TargetFrameworkVersion>v4.8.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -42,8 +42,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abstract\ISoftDeletedEntity.cs" />
-    <Compile Include="Category.cs" />
-    <Compile Include="Product.cs" />
+    <Compile Include="Entities\Category.cs" />
+    <Compile Include="Entities\Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
