--- a/CafeMenuProject.DataAccess/CafeMenuProject.DataAccess.csproj
+++ b/CafeMenuProject.DataAccess/CafeMenuProject.DataAccess.csproj
@@ -64,9 +64,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CafeMenuProject.Entities\CafeMenuProject.Entities.csproj">
+    <ProjectReference Include="..\CafeMenuProject.Core\CafeMenuProject.Core.csproj">
       <Project>{1A9CE3E1-826A-45A7-B66F-51FFB8F76FD6}</Project>
-      <Name>CafeMenuProject.Entities</Name>
+      <Name>CafeMenuProject.Core</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
