--- a/CafeMenuProject.Core/CafeMenuProject.Core.csproj
+++ b/CafeMenuProject.Core/CafeMenuProject.Core.csproj
@@ -44,6 +44,8 @@
     <Compile Include="Abstract\ISoftDeletedEntity.cs" />
     <Compile Include="Entities\Category.cs" />
     <Compile Include="Entities\Product.cs" />
+    <Compile Include="Entities\ProductProperty.cs" />
+    <Compile Include="Entities\Property.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
