--- a/CafeMenuProject.DataAccess/CafeMenuProject.DataAccess.csproj
+++ b/CafeMenuProject.DataAccess/CafeMenuProject.DataAccess.csproj
@@ -58,6 +58,11 @@
     <Compile Include="Configurations\ProductPropertyConfiguration.cs" />
     <Compile Include="Configurations\PropertyConfiguration.cs" />
     <Compile Include="Context\ApplicationDbContext.cs" />
+    <Compile Include="Migrations\202509191903340_InitialCreate.cs" />
+    <Compile Include="Migrations\202509191903340_InitialCreate.Designer.cs">
+      <DependentUpon>202509191903340_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -71,7 +76,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Migrations\" />
+    <EmbeddedResource Include="Migrations\202509191903340_InitialCreate.resx">
+      <DependentUpon>202509191903340_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
