--- a/CafeMenuProject.Business/CafeMenuProject.Business.csproj
+++ b/CafeMenuProject.Business/CafeMenuProject.Business.csproj
@@ -45,10 +45,12 @@
     <Compile Include="Abstract\IProductPropertyService.cs" />
     <Compile Include="Abstract\IProductService.cs" />
     <Compile Include="Abstract\IPropertyService.cs" />
+    <Compile Include="Abstract\IUserService.cs" />
     <Compile Include="Concrete\CategoryService.cs" />
     <Compile Include="Concrete\ProductPropertyService.cs" />
     <Compile Include="Concrete\ProductService.cs" />
     <Compile Include="Concrete\PropertyService.cs" />
+    <Compile Include="Concrete\UserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
