--- a/CafeMenuProject.WebUI/Web.config
+++ b/CafeMenuProject.WebUI/Web.config
@@ -61,6 +61,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="CafeMenuDb" providerName="System.Data.SqlClient" connectionString="server=localhost; database=CafeMenuDb; trusted_connection=true; trustservercertificate=true; multipleactiveresultsets=true;" />
+    <add name="CafeMenuDb"
+		 providerName="System.Data.SqlClient"
+		 connectionString="Data Source=localhost;Initial Catalog=CafeMenuDb;Integrated Security=True;TrustServerCertificate=True;MultipleActiveResultSets=True;" />
   </connectionStrings>
 </configuration>
