--- a/CafeMenuProject.Core/CafeMenuProject.Core.csproj
+++ b/CafeMenuProject.Core/CafeMenuProject.Core.csproj
@@ -47,6 +47,8 @@
     <Compile Include="Entities\ProductProperty.cs" />
     <Compile Include="Entities\Property.cs" />
     <Compile Include="Entities\User.cs" />
+    <Compile Include="IPagedList.cs" />
+    <Compile Include="PagedList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
