--- a/CafeMenuProject.WebUI/CafeMenuProject.WebUI.csproj
+++ b/CafeMenuProject.WebUI/CafeMenuProject.WebUI.csproj
@@ -151,6 +151,8 @@
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
     <Compile Include="Areas\Admin\Controllers\ProductController.cs" />
     <Compile Include="Areas\Admin\Controllers\UserController.cs" />
+    <Compile Include="Areas\Admin\Models\BaseSearchModel.cs" />
+    <Compile Include="Areas\Admin\Models\Categories\CategorySearchModel.cs" />
     <Compile Include="Areas\Admin\Models\Categories\CreateCategoryModel.cs" />
     <Compile Include="Areas\Admin\Models\Categories\EditCategoryModel.cs" />
     <Compile Include="Areas\Admin\Models\Products\CreateProductModel.cs" />
