--- a/CafeMenuProject.WebUI/CafeMenuProject.WebUI.csproj
+++ b/CafeMenuProject.WebUI/CafeMenuProject.WebUI.csproj
@@ -179,6 +179,7 @@
     <Content Include="Content\adminlte\dist\css\alt\adminlte.pages.min.css" />
     <Content Include="Content\adminlte\dist\css\alt\adminlte.plugins.css" />
     <Content Include="Content\adminlte\dist\css\alt\adminlte.plugins.min.css" />
+    <Content Include="Content\adminlte\dist\css\custom-styles.css" />
     <Content Include="Content\adminlte\dist\img\AdminLTELogo.png" />
     <Content Include="Content\adminlte\dist\img\avatar.png" />
     <Content Include="Content\adminlte\dist\img\avatar2.png" />
