--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Web.config
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Web.config
@@ -18,6 +18,9 @@
 				<add namespace="System.Web.Helpers" />
 				<add namespace="System.Web.WebPages" />
 				<add namespace="System.Web.Optimization" />
+
+				<add namespace="CafeMenuProject.WebUI.Areas.Admin.Models.Category" />
+				<add namespace="CafeMenuProject.WebUI.Areas.Admin.Models.Product" />
 			</namespaces>
 		</pages>
 	</system.web.webPages.razor>
