--- a/CafeMenuProject.WebUI/CafeMenuProject.WebUI.csproj
+++ b/CafeMenuProject.WebUI/CafeMenuProject.WebUI.csproj
@@ -152,13 +152,15 @@
     <Compile Include="Areas\Admin\Controllers\ProductController.cs" />
     <Compile Include="Areas\Admin\Controllers\UserController.cs" />
     <Compile Include="Areas\Admin\Models\BaseSearchModel.cs" />
-    <Compile Include="Areas\Admin\Models\Categories\CategorySearchModel.cs" />
-    <Compile Include="Areas\Admin\Models\Categories\CategoryViewModel.cs" />
-    <Compile Include="Areas\Admin\Models\Categories\CreateCategoryModel.cs" />
-    <Compile Include="Areas\Admin\Models\Categories\EditCategoryModel.cs" />
+    <Compile Include="Areas\Admin\Models\Category\CategorySearchModel.cs" />
+    <Compile Include="Areas\Admin\Models\Category\CategoryViewModel.cs" />
+    <Compile Include="Areas\Admin\Models\Category\CreateCategoryModel.cs" />
+    <Compile Include="Areas\Admin\Models\Category\EditCategoryModel.cs" />
     <Compile Include="Areas\Admin\Models\DataTableResult.cs" />
-    <Compile Include="Areas\Admin\Models\Products\CreateProductModel.cs" />
-    <Compile Include="Areas\Admin\Models\Products\EditProductModel.cs" />
+    <Compile Include="Areas\Admin\Models\Product\CreateProductModel.cs" />
+    <Compile Include="Areas\Admin\Models\Product\EditProductModel.cs" />
+    <Compile Include="Areas\Admin\Models\Product\ProductSearchModel.cs" />
+    <Compile Include="Areas\Admin\Models\Product\ProductViewModel.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
