--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Web.config
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Web.config
@@ -21,6 +21,7 @@
 
 				<add namespace="CafeMenuProject.WebUI.Areas.Admin.Models.Category" />
 				<add namespace="CafeMenuProject.WebUI.Areas.Admin.Models.Product" />
+				<add namespace="CafeMenuProject.WebUI.Helpers" />
 			</namespaces>
 		</pages>
 	</system.web.webPages.razor>
