--- a/CafeMenuProject.WebUI/CafeMenuProject.WebUI.csproj
+++ b/CafeMenuProject.WebUI/CafeMenuProject.WebUI.csproj
@@ -162,6 +162,8 @@
     <Compile Include="Areas\Admin\Models\Product\EditProductModel.cs" />
     <Compile Include="Areas\Admin\Models\Product\ProductSearchModel.cs" />
     <Compile Include="Areas\Admin\Models\Product\ProductViewModel.cs" />
+    <Compile Include="Areas\Admin\Models\Property\PropertySearchModel.cs" />
+    <Compile Include="Areas\Admin\Models\Property\PropertyViewModel.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Filters\ParameterBasedOnFormNameAttribute.cs" />
     <Compile Include="Global.asax.cs">
