--- a/CafeMenuProject.WebUI/Areas/Admin/Views/Web.config
+++ b/CafeMenuProject.WebUI/Areas/Admin/Views/Web.config
@@ -22,6 +22,7 @@
 				<add namespace="CafeMenuProject.WebUI.Areas.Admin.Models.Category" />
 				<add namespace="CafeMenuProject.WebUI.Areas.Admin.Models.Product" />
 				<add namespace="CafeMenuProject.WebUI.Areas.Admin.Models.Property" />
+				<add namespace="CafeMenuProject.WebUI.Areas.Admin.Models.User" />
 				<add namespace="CafeMenuProject.WebUI.Helpers" />
 			</namespaces>
 		</pages>
