--- a/CafeMenuProject.WebUI/CafeMenuProject.WebUI.csproj
+++ b/CafeMenuProject.WebUI/CafeMenuProject.WebUI.csproj
@@ -164,6 +164,7 @@
     <Compile Include="Areas\Admin\Models\Product\ProductViewModel.cs" />
     <Compile Include="Areas\Admin\Models\Property\PropertySearchModel.cs" />
     <Compile Include="Areas\Admin\Models\Property\PropertyViewModel.cs" />
+    <Compile Include="Areas\Admin\Models\User\CreateUserModel.cs" />
     <Compile Include="Areas\Admin\Models\User\UserSearchModel.cs" />
     <Compile Include="Areas\Admin\Models\User\UserViewModel.cs" />
     <Compile Include="Controllers\HomeController.cs" />
