--- a/CafeMenuProject.WebUI/Web.config
+++ b/CafeMenuProject.WebUI/Web.config
@@ -61,8 +61,6 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="CafeMenuDb"
-		 providerName="System.Data.SqlClient"
-		 connectionString="Data Source=localhost;Initial Catalog=CafeMenuDb;Integrated Security=True;TrustServerCertificate=True;MultipleActiveResultSets=True;" />
+    <add name="CafeMenuDb" providerName="System.Data.SqlClient" connectionString="Data Source=localhost;Initial Catalog=CafeMenuDb;Integrated Security=True;TrustServerCertificate=True;MultipleActiveResultSets=True;" />
   </connectionStrings>
 </configuration>
