--- a/CafeMenuProject.WebUI/CafeMenuProject.WebUI.csproj
+++ b/CafeMenuProject.WebUI/CafeMenuProject.WebUI.csproj
@@ -160,6 +160,7 @@
     <Compile Include="Areas\Admin\Models\Product\CreateProductModel.cs" />
     <Compile Include="Areas\Admin\Models\Product\CreateProductPropertyModel.cs" />
     <Compile Include="Areas\Admin\Models\Product\EditProductModel.cs" />
+    <Compile Include="Areas\Admin\Models\Product\EditProductPropertyModel.cs" />
     <Compile Include="Areas\Admin\Models\Product\ProductSearchModel.cs" />
     <Compile Include="Areas\Admin\Models\Product\ProductViewModel.cs" />
     <Compile Include="Areas\Admin\Models\Product\ProductPropertySearchModel.cs" />
@@ -2276,6 +2277,12 @@
     <Content Include="Areas\Admin\Views\Product\Create.cshtml" />
     <Content Include="Areas\Admin\Views\User\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\User\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\Product\_EditProductCard.cshtml" />
+    <Content Include="Areas\Admin\Views\Product\_CreateProductCard.cshtml" />
+    <Content Include="Areas\Admin\Views\Product\_EditProductPropertyCard.cshtml" />
+    <Content Include="Areas\Admin\Views\Product\_CreateProductPropertyModal.cshtml" />
+    <Content Include="Areas\Admin\Views\Product\_EditProductPropertyModal.cshtml" />
+    <Content Include="Areas\Admin\Views\Product\_EditProductProperty.cshtml" />
     <None Include="Scripts\jquery-3.7.0.intellisense.js" />
     <Content Include="Scripts\jquery-3.7.0.js" />
     <Content Include="Scripts\jquery-3.7.0.min.js" />
