--- a/CafeMenuProject.Business/CafeMenuProject.Business.csproj
+++ b/CafeMenuProject.Business/CafeMenuProject.Business.csproj
@@ -69,6 +69,10 @@
       <Project>{1A9CE3E1-826A-45A7-B66F-51FFB8F76FD6}</Project>
       <Name>CafeMenuProject.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\CafeMenuProject.DataAccess\CafeMenuProject.DataAccess.csproj">
+      <Project>{2FEA1C2A-8D31-48D4-A3A1-E43A2F77023F}</Project>
+      <Name>CafeMenuProject.DataAccess</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
