--- a/CafeMenuProject.WebUI/CafeMenuProject.WebUI.csproj
+++ b/CafeMenuProject.WebUI/CafeMenuProject.WebUI.csproj
@@ -2347,6 +2347,10 @@
       <Project>{1A9CE3E1-826A-45A7-B66F-51FFB8F76FD6}</Project>
       <Name>CafeMenuProject.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\CafeMenuProject.DataAccess\CafeMenuProject.DataAccess.csproj">
+      <Project>{2FEA1C2A-8D31-48D4-A3A1-E43A2F77023F}</Project>
+      <Name>CafeMenuProject.DataAccess</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
