--- a/CafeMenuProject.WebUI/packages.config
+++ b/CafeMenuProject.WebUI/packages.config
@@ -3,6 +3,9 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net481" />
   <package id="bootstrap" version="5.2.3" targetFramework="net481" />
   <package id="EntityFramework" version="6.5.1" targetFramework="net481" />
+  <package id="FluentValidation" version="8.6.1" targetFramework="net481" />
+  <package id="FluentValidation.Mvc5" version="8.6.1" targetFramework="net481" />
+  <package id="FluentValidation.ValidatorAttribute" version="8.6.1" targetFramework="net481" />
   <package id="jQuery" version="3.7.0" targetFramework="net481" />
   <package id="jQuery.Validation" version="1.19.5" targetFramework="net481" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net481" />
@@ -14,6 +17,7 @@
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net481" />
   <package id="Modernizr" version="2.8.3" targetFramework="net481" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net481" />
+  <package id="System.ComponentModel.Annotations" version="4.4.1" targetFramework="net481" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net481" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net481" />
   <package id="Unity" version="5.11.10" targetFramework="net481" />
