--- a/CafeMenuProject.WebUI/CafeMenuProject.WebUI.csproj
+++ b/CafeMenuProject.WebUI/CafeMenuProject.WebUI.csproj
@@ -184,7 +184,9 @@
     <Compile Include="Areas\Admin\Validators\Category\CreateCategoryValidator.cs" />
     <Compile Include="Areas\Admin\Validators\Category\EditCategoryValidator.cs" />
     <Compile Include="Areas\Admin\Validators\Product\CreateProductValidator.cs" />
+    <Compile Include="Areas\Admin\Validators\Product\CreatePropertyValidator.cs" />
     <Compile Include="Areas\Admin\Validators\Product\EditProductValidator.cs" />
+    <Compile Include="Areas\Admin\Validators\Product\EditPropertyValidator.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Filters\ParameterBasedOnFormNameAttribute.cs" />
     <Compile Include="Global.asax.cs">
