--- a/CafeMenuProject.WebUI/CafeMenuProject.WebUI.csproj
+++ b/CafeMenuProject.WebUI/CafeMenuProject.WebUI.csproj
@@ -187,6 +187,8 @@
     <Compile Include="Areas\Admin\Validators\Product\CreatePropertyValidator.cs" />
     <Compile Include="Areas\Admin\Validators\Product\EditProductValidator.cs" />
     <Compile Include="Areas\Admin\Validators\Product\EditPropertyValidator.cs" />
+    <Compile Include="Areas\Admin\Validators\User\CreateUserValidator.cs" />
+    <Compile Include="Areas\Admin\Validators\User\EditUserValidator.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Filters\ParameterBasedOnFormNameAttribute.cs" />
     <Compile Include="Global.asax.cs">
