--- a/CafeMenuProject.WebUI/CafeMenuProject.WebUI.csproj
+++ b/CafeMenuProject.WebUI/CafeMenuProject.WebUI.csproj
@@ -189,6 +189,7 @@
     <Compile Include="Areas\Admin\Validators\Product\EditPropertyValidator.cs" />
     <Compile Include="Areas\Admin\Validators\User\CreateUserValidator.cs" />
     <Compile Include="Areas\Admin\Validators\User\EditUserValidator.cs" />
+    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Filters\ParameterBasedOnFormNameAttribute.cs" />
     <Compile Include="Global.asax.cs">
@@ -196,6 +197,7 @@
     </Compile>
     <Compile Include="Helpers\HtmlExtensions.cs" />
     <Compile Include="Infrastructure\JsonCamelCaseResult.cs" />
+    <Compile Include="Models\LoginViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -2326,10 +2328,10 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Account\Login.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
