--- a/CafeMenuProject.WebUI/Views/Web.config
+++ b/CafeMenuProject.WebUI/Views/Web.config
@@ -18,6 +18,8 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="CafeMenuProject.WebUI" />
+
+		<add namespace="CafeMenuProject.WebUI.Models"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
