Admin Dashboard kurlar eklendi.

--- a/CafeMenuProject.Business/CafeMenuProject.Business.csproj
+++ b/CafeMenuProject.Business/CafeMenuProject.Business.csproj
@@ -56,13 +56,16 @@
     <Compile Include="Abstract\IProductPropertyService.cs" />
     <Compile Include="Abstract\IProductService.cs" />
     <Compile Include="Abstract\IPropertyService.cs" />
+    <Compile Include="Abstract\ITcmbService.cs" />
     <Compile Include="Abstract\IUserService.cs" />
     <Compile Include="Concrete\AuthenticationService.cs" />
     <Compile Include="Concrete\CategoryService.cs" />
+    <Compile Include="Concrete\Dtos\ExchangeRateDto.cs" />
     <Compile Include="Concrete\Dtos\ProductPropertyDto.cs" />
     <Compile Include="Concrete\ProductPropertyService.cs" />
     <Compile Include="Concrete\ProductService.cs" />
     <Compile Include="Concrete\PropertyService.cs" />
+    <Compile Include="Concrete\TcmbService.cs" />
     <Compile Include="Concrete\UserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
